libs/@local/hashql/ast/tests/ui/lowering/type-extractor/unused-generic-parameter.jsonc
//@ run: fail
//@ description: Test that we emit an issue if a generic parameter is unused
// biome-ignore format: readability
["newtype", "Some<T>", { "#struct": {"value": "T"} },
["newtype", "None", "Null",
["type", "Option<T, E>", ["|", {"#tuple": ["Some<T>"]}, {"#tuple": ["None"]}],
//~^ ERROR Generic parameter `E` declared here...
"_"
]]]
